<?xml version="1.0"?>
<package format="3">
 <name>risk_aware_planner</name>
 <version>0.0.1</version>
 <description>Risk-aware global planner plugin for Nav2</description>

 <maintainer email="user@example.com">user</maintainer>
 <license>Apache-2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <depend>rclcpp</depend>
 <depend>nav2_core</depend>
 <depend>nav_msgs</depend>
 <depend>pluginlib</depend>
 <depend>nav2_costmap_2d</depend>

 <export>
   <nav2_core plugin="${prefix}/risk_aware_planner_plugin.xml"/>
 </export>

</package>
